--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -40,7 +40,7 @@
   font-size: 20px;
 }
 
-.home-about-top {
+.grey-skew {
   background-image: image-url("skew-1.svg");
   background-repeat: no-repeat;
   background-position: left-top;
@@ -61,14 +61,13 @@
 }
 
 .home-title {
+  border-bottom: solid 3px $light-blue;
   color: $dark-gray;
   text-decoration: none;
 
 }
 
 .home-underline {
-  color: $light-blue;
-  text-decoration: underline;
   text-align: center;
   font-family: $base-font;
   padding: 100px 0 30px;
@@ -87,6 +86,7 @@
 .homepage-posts {
   width: 100%;
   margin: 0 auto;
+  text-align: center;
 }
 
 @media screen and (max-width: 585px) {
