basic toggle between map and list

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,12 +2,12 @@
   <div class="form-title"><h1>Posts</h1></div>
   <!-- FILTER THE RESULTS -->
   <span>
-    <span class="btn-black butti active" data-target="#list-part">LIST</span>
-    <span class="btn-black butti" data-target="#map">MAP</span>
+    <a class="btn-black butti active" data-target="#list-part">LIST</a>
+    <a class="btn-black butti" data-target="#map">MAP</a>
 
 
   </span>
-  <div id="list-part">
+  <div class= "post-content" id="list-part">
 
     <div class="container">
       <div class="posts-selection">
@@ -69,7 +69,9 @@
 
 </div>
 
-<div id="map" class="dynamic_map text-center" style="width: 75%; height: 400px;"></div>
+
+<div id="map" class="dynamic_map text-center post-content hidden" style="width: 75%; height: 400px;"></div>
+
 
 
 <!-- This is the code for the map -->
