break words to fit in div

--- a/app/assets/stylesheets/pages/_profiles.scss
+++ b/app/assets/stylesheets/pages/_profiles.scss
@@ -28,6 +28,8 @@
   font-family: "Open Sans";
   text-align: center;
   padding: 10px 0;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .profile-title {
