--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,34 +1,30 @@
 <div class="wrapper-posts">
   <div class="form-title"><h1>Posts</h1></div>
   <!-- FILTER THE RESULTS -->
-  <span>
-    <a class="btn-black butti active" data-target="#list-part">LIST</a>
-    <a class="btn-black butti" data-target="#map">MAP</a>
 
-
-  </span>
-  <div class= "post-content" id="list-part">
-
-    <div class="container">
-      <div class="posts-selection">
-        <div class="posts-type-selection person-type">
-          <%= link_to "Refugee", posts_path(kind: 'refugee', category: @category), class: filter_kind_css_class('refugee') %>
-
-          <%= link_to "Dutchie", posts_path(kind: 'dutchie', category: @category), class: filter_kind_css_class('dutchie') %>
-
-          <%= link_to "All", posts_path(kind: 'all', category: @category), class: filter_kind_css_class('all') %>
-        </div>
-
-        <div class="posts-type-selection category-type">
-          <%= link_to "Skills", posts_path(category: 'skills', kind: @kind), class: filter_category_css_class('skills') %>
-
-          <%= link_to "Social", posts_path(category: 'social', kind: @kind), class: filter_category_css_class('social') %>
-
-          <%= link_to "Languages", posts_path(category: 'languages', kind: @kind), class: filter_category_css_class('languages') %>
-
-          <%= link_to "All", posts_path(category: 'all', kind: @kind), class: filter_category_css_class('all') %>
-        </div>
+  <div class="container">
+    <div class="posts-selection">
+  <div class="list-type">
+      <span class="toggle-map-list">
+        <a class="btn-blue-select butti active" data-target="#list-part">LIST</a>
+        <a class="btn-blue-select butti" data-target="#map">MAP</a>
+      </span>
+  </div>
+      <div class="posts-type-selection person-type">
+        <%= link_to "Refugee", posts_path(kind: 'refugee', category: @category), class: filter_kind_css_class('refugee') %>
+        <%= link_to "Dutchie", posts_path(kind: 'dutchie', category: @category), class: filter_kind_css_class('dutchie') %>
+        <%= link_to "All", posts_path(kind: 'all', category: @category), class: filter_kind_css_class('all') %>
       </div>
+
+      <div class="posts-type-selection category-type">
+        <%= link_to "Skills", posts_path(category: 'skills', kind: @kind), class: filter_category_css_class('skills') %>
+        <%= link_to "Social", posts_path(category: 'social', kind: @kind), class: filter_category_css_class('social') %>
+        <%= link_to "Languages", posts_path(category: 'languages', kind: @kind), class: filter_category_css_class('languages') %>
+
+        <%= link_to "All", posts_path(category: 'all', kind: @kind), class: filter_category_css_class('all') %>
+      </div>
+    </div>
+    <div class= "post-content" id="list-part">
       <div class="row">
         <% @posts.reverse.each do |post| %>
         <div class="col-xs-12 col-sm-6 col-md-4">
@@ -63,14 +59,17 @@
       </div>
       <% end %>
     </div>
+
+    <div class="map-wrap">
+    <div id="map" class="dynamic_map text-center post-content hidden" style="width: 100%; height: 70vh;"></div>
+    </div>
   </div>
 </div>
 
 
-</div>
 
 
-<div id="map" class="dynamic_map text-center post-content hidden" style="width: 75%; height: 400px;"></div>
+
 
 
 
