--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -89,6 +89,21 @@
   text-align: center;
 }
 
+.home-posts{
+  background-color: white;
+  border: 4px solid $light-blue;
+  padding: 74px 27px 11px 16px;
+  margin: 20px 0px;
+  min-height: 380px;
+  position: relative;
+}
+
+.home-posts-title {
+  color: black;
+  text-decoration: none;
+  padding-bottom: 20px;
+}
+
 @media screen and (max-width: 585px) {
   .home-logo{
     padding-top: 2px;
