--- a/app/assets/stylesheets/pages/_posts.scss
+++ b/app/assets/stylesheets/pages/_posts.scss
@@ -5,7 +5,7 @@
   padding-top: 80px;
 
   text-align: center;
- }
+}
 
 .posts-card {
   background-color: white;
@@ -14,21 +14,14 @@
   margin: 20px 0px;
   min-height: 380px;
   position: relative;
-
 }
 
 .posts-title {
   color: black;
   text-decoration: none;
-  padding-bottom: 20px;
-
-}
-
-.posts-underline {
-  color: $orange;
-  text-decoration: underline;
   text-align: center;
   font-size: 32px;
+  border-bottom: 3px solid $orange;
 }
 
 .posts-selection {
@@ -54,6 +47,7 @@
 
 .posts-content {
   min-height: 150px;
+  padding-top: 15px;
 }
 
 .posts-center {
@@ -69,7 +63,7 @@
 .posts-type-selection {
   display: flex;
 
-  }
+}
 
 .post-ago {
   position: absolute;
@@ -91,15 +85,15 @@
 
 .active-black{
   background-color: rgba(0,0,0,0);
-    color: black;
-    transition: background-color 1s, color 1s ease;
+  color: black;
+  transition: background-color 1s, color 1s ease;
 }
 
 
 .active-orange{
   background-color: rgba(0,0,0,0);
-    color: $orange;
-    transition: background-color 1s, color 1s ease;
+  color: $orange;
+  transition: background-color 1s, color 1s ease;
 }
 
 .make-post {
@@ -107,9 +101,9 @@
 }
 
 // one post
- .wrapper-post {
+.wrapper-post {
   padding: 80px 40px;
- }
+}
 
 .post-card {
   background-color: white;
