--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,20 +25,25 @@
         <div class="container-fluid">
           <div class="row">
             <% @posts.sample(6).each do |post| %>
-            <div class="col-md-12 col-lg-6">
-              <div class= "home-card">
-                <div class="card-title"><h2><%= link_to post.subject, post_path(post) %></h2> </div>
-                <p><%= link_to post.author.title, user_path(post.author) %>
-                  <i> <%= time_ago_in_words(post.created_at) %> ago</i>
-                </p>
-
-                <div class="card-description">
-                  <p><%= truncate(post.content, :length => 150) %></p>
-                  <% if post.content.length > 150 %>
-                  <p class="read_more_button"> <%= link_to "Read more", post_path(post) %></p>
-                  <% end  %>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="posts-card">
+              <span class="posts-title"> <%= post.subject %></span> <br>
+                 <div class="posts-content">
+                  <%= truncate(post.content, :length => 120) %>
+                  <% if post.content.length > 120 %>
+                  <%= link_to "read more", post_path(post)   %>
+                  <% end %>
+                </div>
+                <div class="post-ago">
+                  <p><%= time_ago_in_words(post.created_at) %> ago</p>
+                </div>
+                <div class="posts-images">
+                  <%= cl_image_tag post.author.full_picture, class: "avatar" %>
+                  <%= link_to post.author.title, user_path(post.author) %>
+                </div>
+                <div class="post-make">
                   <% if post.button_valid?(current_user) %>
-                  <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "make btn btn-success" %></p>
+                  <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
                   <% end %>
                 </div>
               </div>
