postion of toggle and change cursor

--- a/app/assets/stylesheets/pages/_posts.scss
+++ b/app/assets/stylesheets/pages/_posts.scss
@@ -117,11 +117,11 @@
 /* TOGGLE MAP LIST */
 
 .toggle-map-list{
-  font-size: 30px;
+  font-size: 20px;
   border-style: solid;
   border-color: $light-blue;
   font-color: white;
-  text-align: left;
+  text-align: right;
 }
 
 
