--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="posts-selection">
   <div class="list-type">
-      <span class="toggle-map-list">
+      <span style="cursor:default" class="toggle-map-list">
         <a class="btn-blue-select butti active" data-target="#list-part">LIST</a>
         <a class="btn-blue-select butti" data-target="#map">MAP</a>
       </span>
