--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -217,6 +217,8 @@ btn btn-blue-black
 .btn-blue-select {
   font-family: arial;
   padding: 3px;
+  padding-left: 40px;
+  padding-right: 40px;
   background-color: $light-blue;
   color: white;
   font-family: $base-font;
