--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,29 +27,30 @@
             <% @posts.sample(6).each do |post| %>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="posts-card">
-              <span class="posts-title"> <%= post.subject %></span> <br>
-                 <div class="posts-content">
-                  <%= truncate(post.content, :length => 120) %>
-                  <% if post.content.length > 120 %>
-                  <%= link_to "read more", post_path(post)   %>
-                  <% end %>
-                </div>
-                <div class="post-ago">
-                  <p><%= time_ago_in_words(post.created_at) %> ago</p>
-                </div>
-                <div class="posts-images">
-                  <%= cl_image_tag post.author.full_picture, class: "avatar" %>
-                  <%= link_to post.author.title, user_path(post.author) %>
-                </div>
-                <div class="post-make">
-                  <% if post.button_valid?(current_user) %>
-                  <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
-                  <% end %>
+                <div class="posts-underline-orange">
+                  <span class="posts-title"> <%= post.subject %></span> </div><br>
+                  <div class="posts-content">
+                    <%= truncate(post.content, :length => 120) %>
+                    <% if post.content.length > 120 %>
+                    <%= link_to "read more", post_path(post)   %>
+                    <% end %>
+                  </div>
+                  <div class="post-ago">
+                    <p><%= time_ago_in_words(post.created_at) %> ago</p>
+                  </div>
+                  <div class="posts-images">
+                    <%= cl_image_tag post.author.full_picture, class: "avatar" %>
+                    <%= link_to post.author.title, user_path(post.author) %>
+                  </div>
+                  <div class="post-make">
+                    <% if post.button_valid?(current_user) %>
+                    <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
+                    <% end %>
+                  </div>
                 </div>
               </div>
+              <% end %>
             </div>
-            <% end %>
           </div>
         </div>
-      </div>
 
