--- a/app/assets/stylesheets/pages/_posts.scss
+++ b/app/assets/stylesheets/pages/_posts.scss
@@ -23,6 +23,13 @@
   font-size: 32px;
 }
 
+.posts-underline {
+  color: $orange;
+  text-decoration: underline;
+  text-align: center;
+  font-size: 32px;
+}
+
 .posts-selection {
   color: $orange;
   text-align: center;
