--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,56 +1,58 @@
-    <div class="home-top">
+  
+<div class="home-top">
+</div>
+<div class="home-middle">
+  <div class="home-logo"><%=image_tag "refuGapp.png", width: '300px'  %></div> <br>
+  <div class="home-tagline">Fill the gap between locals and refugees.</div>
+  <div class="home-button">
+    <% if current_user  %>
+    <%= link_to "What's new?", posts_path, class:"hvr-sweep-to-right btn-orange"%>
+    <% else  %>
+    <%= link_to "CONNECT", new_user_session_path, class:"hvr-sweep-to-right btn-orange"%>
+    <% end %>
+  </div>
+</div>
+<div class="home-wrapper">
+  <div class="home-underline"><span class="home-title">About</span></div>
+  <div class="home-about">
+    <p> We all are blessed with a lot of skills. Why not connect with the people around us by exchanging them? With RefuGapp we are filling the gap between locals and newcomers by providing a platform where you can offer your offer and find skill and connect with new people! </p>
+    <p>Are you a Local? Get to now the newcomers in your city by exchanging skills! Discover how refugees can help you,m sen da request and.. connect! Or: a skill you want to share? Make a post and someone will find you!</p>
+    <p>Are you a newcomer? Get to know the locals by offering your skills! Make a post and help a local with the things you are good at.
+      Or: in need of some help? Look what the locals are offering and send a request!</p>
     </div>
-    <div class="home-middle">
-      <div class="home-logo"><%=image_tag "refuGapp.png", width: '300px'  %></div> <br>
-      <div class="home-tagline">Fill the gap between locals and refugees.</div>
-      <div class="home-button">
-        <% if current_user  %>
-        <%= link_to "What's new?", posts_path, class:"hvr-sweep-to-right btn-orange"%>
-        <% else  %>
-        <%= link_to "CONNECT", new_user_session_path, class:"hvr-sweep-to-right btn-orange"%>
-        <% end %>
-      </div>
-    </div>
-    <div class="home-underline"><span class="home-title">About</span></div>
-    <div class="home-about">
-      <p> We all are blessed with a lot of skills. Why not connect with the people around us by exchanging them? With RefuGapp we are filling the gap between locals and newcomers by providing a platform where you can offer your offer and find skill and connect with new people! </p>
-      <p>Are you a Local? Get to now the newcomers in your city by exchanging skills! Discover how refugees can help you,m sen da request and.. connect! Or: a skill you want to share? Make a post and someone will find you!</p>
-      <p>Are you a newcomer? Get to know the locals by offering your skills! Make a post and help a local with the things you are good at.
-        Or: in need of some help? Look what the locals are offering and send a request!</p>
-      </div>
 
 
-      <div class="home-underline"><span class="home-title">What are people posting?</span></div>
-      <div class="homepage-posts">
-        <div class="container-fluid">
-          <div class="row">
-            <% @posts.sample(3).each do |post| %>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="posts-card">
-                <div class="posts-underline-orange">
-                  <span class="posts-title"> <%= post.subject %></span> </div><br>
-                  <div class="posts-content">
-                    <%= truncate(post.content, :length => 120) %>
-                    <% if post.content.length > 120 %>
-                    <%= link_to "read more", post_path(post)   %>
-                    <% end %>
-                  </div>
-                  <div class="post-ago">
-                    <p><%= time_ago_in_words(post.created_at) %> ago</p>
-                  </div>
-                  <div class="posts-images">
-                    <%= cl_image_tag post.author.full_picture, class: "avatar" %>
-                    <%= link_to post.author.title, user_path(post.author) %>
-                  </div>
-                  <div class="post-make">
-                    <% if post.button_valid?(current_user) %>
-                    <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
-                    <% end %>
-                  </div>
+    <div class="home-underline"><span class="home-title">What are people posting?</span></div>
+    <div class="homepage-posts">
+      <div class="container-fluid">
+        <div class="row">
+          <% @posts.sample(3).each do |post| %>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="posts-card">
+              <div class="posts-underline-orange">
+                <span class="posts-title"> <%= post.subject %></span> </div><br>
+                <div class="posts-content">
+                  <%= truncate(post.content, :length => 120) %>
+                  <% if post.content.length > 120 %>
+                  <%= link_to "read more", post_path(post)   %>
+                  <% end %>
+                </div>
+                <div class="post-ago">
+                  <p><%= time_ago_in_words(post.created_at) %> ago</p>
+                </div>
+                <div class="posts-images">
+                  <%= cl_image_tag post.author.full_picture, class: "avatar" %>
+                  <%= link_to post.author.title, user_path(post.author) %>
+                </div>
+                <div class="post-make">
+                  <% if post.button_valid?(current_user) %>
+                  <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
+                  <% end %>
                 </div>
               </div>
-              <% end %>
             </div>
+            <% end %>
           </div>
         </div>
-
+      </div>
+    </div>
