Add badge + make function

--- a/app/views/shared/_menu_toggle.html.erb
+++ b/app/views/shared/_menu_toggle.html.erb
@@ -11,7 +11,11 @@
       <%= link_to "All posts", posts_path, class: "hvr-underline-from-center btn-simple-black" %> <br>
       <%= link_to "Shared stories", shared_stories_path, class: "hvr-underline-from-center btn-simple-black" %> <br>
       <% if current_user %>
-        <%= link_to "My dashboard", dashboard_root_path, class: "hvr-underline-from-center btn-simple-black" %> <br>
+        <span class="badge-container-dashboard">
+        <%= link_to "My dashboard", dashboard_root_path, class: "hvr-underline-from-center btn-simple-black" %>
+        <div class="badge-dashboard">3</span>
+        </div>
+        <br>
       <%= link_to "My profile", profile_path, class: "hvr-underline-from-center btn-simple-black" %> <br> <br>
       <%= link_to "Log out",  destroy_user_session_path, method: :delete, class: "hvr-underline-from-center btn-simple-black small-font"  %>
       <% else %>
