--- a/app/assets/stylesheets/components/_badges.scss
+++ b/app/assets/stylesheets/components/_badges.scss
@@ -5,6 +5,7 @@
   width: 30px;
   color: gray;
 }
+
 .badge {
   position: absolute;
   top: -5px;
@@ -35,4 +36,25 @@
 .badge-bordered {
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+}
+
+.badge-container-dashboard {
+  position: relative;
+}
+
+.badge-dashboard {
+  position: absolute;
+  top: 0px;
+  right: -75px;
+  font-size: 10px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 18px;
+  width: 18px;
+  text-align: center;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background: $orange;
 }
