--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,7 +26,7 @@
 
         <%= link_to "Social", posts_path(category: 'social', kind: @kind), class: filter_category_css_class('social') %>
 
-        <%= link_to "Languages", posts_path(category: 'languages', kind: @kind), class: filter_category_css_class('languages') %>
+        <%= link_to "Languages", posts_path(category: 'language', kind: @kind), class: filter_category_css_class('language') %>
 
         <%= link_to "All", posts_path(category: 'all', kind: @kind), class: filter_category_css_class('all') %>
       </div>
