--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,9 +43,13 @@
                     <%= link_to post.author.title, user_path(post.author) %>
                   </div>
                   <div class="post-make">
-                    <% if post.button_valid?(current_user) %>
+                    <% if post.button_valid(current_user) == "redirect" %>
+                    <p><%= link_to "Write a request to this Post", new_user_session_path(), class: "hvr-underline-from-center btn-border-orange" %></p>
+                    <% elsif post.button_valid(current_user) == "request" %>
                     <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
+                    <%else %>
                     <% end %>
+
                   </div>
                 </div>
               </div>
