add new tagline

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="home-middle">
   <div class="home-logo"><%=image_tag "refuGapp.png", width: '300px'  %></div> <br>
-  <div class="home-tagline">Hallo! Hi! السلام عليكم! </div>
+  <div class="home-tagline">Hallo - Hi - السلام عليكم </div>
   <div class="home-button">
     <% if current_user  %>
     <%= link_to "What's new?", posts_path, class:"hvr-sweep-to-right btn-orange"%>
