--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -61,7 +61,8 @@
   margin: 0 auto;
   color: $dark-gray;
   padding-bottom: 100px;
-  width: 80%;
+  width: 60%;
+  font-size: 18px;
 }
 
 .home-title {
@@ -106,6 +107,10 @@
   color: black;
   text-decoration: none;
   padding-bottom: 20px;
+}
+
+.home-highlight {
+  color: $orange;
 }
 
 @media screen and (max-width: 585px) {
