add icons to all posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -50,6 +50,14 @@
                 <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
                 <% end %>
               </div>
+              <% if post.category == 'social'  %>
+              <div class="posts-icon"><i class="fa fa-coffee" aria-hidden="true"></i></div>
+              <% elsif post.category == 'skills'  %>
+              <div class="posts-icon"><i class="fa fa-wrench" aria-hidden="true"></i></div>
+              <% elsif post.category == "language"  %>
+              <div class="posts-icon"><i class="fa fa-comments" aria-hidden="true"></i>
+              </div>
+              <% end  %>
             </div>
           </div>
           <% end %>
