--- a/app/views/shared_stories/show.html.erb
+++ b/app/views/shared_stories/show.html.erb
@@ -12,11 +12,14 @@
     <%= link_to @story.member.title, user_path(@story.member) %> <br>
   </p>
 </div>
-  <br>
+<br>
+<% if current_user %>
 <div class="stories-links-one">
  <%= link_to "Write a story", new_shared_story_path, class: "hvr-sweep-to-right btn-black"  %>
-</div>
-  <br>
+</div>  <br>
+<% end %>
+
+
 <div class="stories-links-two">
   <%= link_to "Back to all stories", shared_stories_path, class: "hvr-underline-from-center btn-simple-blue" %>
 </div>
