add logo with link to home

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 </head>
 <body>
 <%= render 'shared/menu_toggle' %>
+<%= render 'shared/menu_logo'  %>
  <%#= render 'shared/navbar' %>
  <%= render 'shared/flashes' %>
  <%= yield %>
