make request#new form

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -53,3 +53,16 @@
   opacity: 0;
   filter: alpha(opacity=0);
 }
+
+.message{
+  margin: 0px;
+  width: 387px;
+  height: 100px;
+  border-style: none;
+
+}
+
+
+.request-button{
+  font-size: 12px;
+}
