change wrapper on dashboard and add title

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,5 +1,5 @@
 .wrapper-dashboard {
-  padding: 80px 20px;
+  padding: 80px 90px;
 }
 
 .dashboard-left {
@@ -115,4 +115,8 @@
       text-decoration: none;
     }
   }
+}
+
+.your_posts {
+  text-align: center;
 }
