--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,34 +1,28 @@
 .home-wrapper {
   padding: 0 65px;
+  margin-bottom: 100px;
 }
 
-.home-top {
-  background-color: $light-blue;
-  height: 90px;
-  position: relative;
+.home-background {
+  width: 100%;
+  height: 100%;
+  margin-top: -120px;
+  background-image: image-url("background-blue-gray.png");
+  background-size: cover;
 }
 
 .home-middle {
-  background-image: image-url("skew.svg");
-  background-repeat: no-repeat;
-  background-position: left-top;
-  background-size: 100% auto;
-  margin-top: -2px;
+  margin-top: 120px;
+  padding-top: 60px;
   text-align: center;
   min-height: 300px;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding-bottom: 30px;
-}
-
-.diagonal-blue {
-  position: absolute;
-  top: 129px;
 }
 
 .home-logo {
-  padding-top: 50px;
+  padding-top: 100px;
   img {
     width: 40%;
   }
@@ -42,17 +36,6 @@
 .home-tagline {
   font-family: $base-font;
   font-size: 40px;
-}
-
-.grey-skew {
-  background-image: image-url("skew-1.svg");
-  background-repeat: no-repeat;
-  background-position: left-top;
-  background-size: 100% 100%;
-  height: 214px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
 }
 
 .home-about {
@@ -73,7 +56,7 @@
 .home-underline {
   text-align: center;
   font-family: $base-font;
-  padding: 100px 0 30px;
+  padding: 0 0 30px;
   font-size: 32px;
   text-decoration: underline;
   color: $light-blue;
@@ -111,14 +94,5 @@
 
 .home-highlight {
   color: $orange;
-}
-
-@media screen and (max-width: 585px) {
-  .home-logo{
-    padding-top: 2px;
-    img {
-      width: 70%;
-    }
-  }
 }
 
