--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-  
+<div class="home-background">
 <div class="home-top">
 </div>
 <div class="home-middle">
@@ -30,7 +30,7 @@
           <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="posts-card">
               <div class="posts-underline-orange">
-                <span class="posts-title"> <%= post.subject %></span> 
+                <span class="posts-title"> <%= post.subject %></span>
               </div><br>
               <div class="posts-content">
                 <%= truncate(post.content, :length => 120) %>
@@ -60,4 +60,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
