--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,6 @@
-<div class="wrapper-profile">
+<h1 class="text-center">Profile</h1>
 
+<div class="wrapper-profile">
 <div class="profile-body">
 <div class="container">
   <div class="row">
