change title on shared stories

--- a/app/views/shared_stories/index.html.erb
+++ b/app/views/shared_stories/index.html.erb
@@ -1,7 +1,5 @@
 <div class="wrapper-stories">
-  <div class="stories-underline">
-    <span class="stories-title">Shared Stories</span>
-  </div>
+    <h1 class="text-center">Shared Stories</h1>
   <div class="container">
     <div class="row">
     <% @shared_stories.reverse.each do |story| %>
