--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
   <!-- FILTER THE RESULTS -->
 
 
-  <div class="container">
+  <div class="container-fluid">
     <div class="posts-selection">
       <div class="list-type">
         <span style="cursor:pointer" class="toggle-map-list">
@@ -55,14 +55,6 @@
                 <%else %>
                 <% end %>
               </div>
-              <% if post.category == 'social'  %>
-              <div class="posts-icon"><i class="fa fa-coffee" aria-hidden="true"></i></div>
-              <% elsif post.category == 'skills'  %>
-              <div class="posts-icon"><i class="fa fa-wrench" aria-hidden="true"></i></div>
-              <% elsif post.category == "language"  %>
-              <div class="posts-icon"><i class="fa fa-comments" aria-hidden="true"></i>
-              </div>
-              <% end  %>
             </div>
           </div>
           <% end %>
