--- a/app/assets/stylesheets/pages/_posts.scss
+++ b/app/assets/stylesheets/pages/_posts.scss
@@ -2,7 +2,7 @@
   background-color: white;
   margin-top: 0;
   font-family: $base-font;
-  padding-top: 80px;
+  padding: 80px 90px 0 90px;
   text-align: center;
 }
 
