--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RefuGapp</title>
+  <title><%= meta_title %></title>
+  <meta name="description" content="<%= meta_description %>">
+
+  <!-- Facebook Open Graph data -->
+  <meta property="og:title" content="<%= meta_title %>" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="<%= request.original_url %>" />
+  <meta property="og:image" content="<%= image_url(meta_image) %>" />
+  <meta property="og:description" content="<%= meta_description %>" />
+  <meta property="og:site_name" content="<%= meta_title %>" />
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <!-- IF you use a small image, just use summary.... for a banner image (at least 1000px width, but file size of max.500kb) use summary_large_image -->
+  <meta name="twitter:site" content="<%= DEFAULT_META['twitter_account'] %>">
+  <meta name="twitter:title" content="<%= meta_title %>">
+  <meta name="twitter:description" content="<%= meta_description %>">
+  <meta name="twitter:creator" content="<%= DEFAULT_META['twitter_account'] %>">
+  <meta name="twitter:image:src" content="<%= image_url(meta_image) %>">
+
+  <!-- Google+ Schema.org markup -->
+  <meta itemprop="name" content="<%= meta_title %>">
+  <meta itemprop="description" content="<%= meta_description %>">
+  <meta itemprop="image" content="<%= image_url(meta_image) %>">
+
   <%= csrf_meta_tags %>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,21 +33,21 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
 </head>
 <body>
-<%= render 'shared/menu_toggle' %>
- <%#= render 'shared/navbar' %>
- <%= render 'shared/flashes' %>
- <%= yield %>
+  <%= render 'shared/menu_toggle' %>
+  <%#= render 'shared/navbar' %>
+  <%= render 'shared/flashes' %>
+  <%= yield %>
 
 
- <%= render 'shared/footer'  %>
+  <%= render 'shared/footer'  %>
 
- <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&sensor=false&key=#{ENV["GOOGLE_MAPS_BROWSER_KEY"]}" %>
+  <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&sensor=false&key=#{ENV["GOOGLE_MAPS_BROWSER_KEY"]}" %>
 
- <%= javascript_include_tag "https://cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js" %>
+  <%= javascript_include_tag "https://cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js" %>
 
- <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "application" %>
 
- <%= yield(:after_js) %>
+  <%= yield(:after_js) %>
 </body>
 </html>
 
