--- a/app/views/shared_stories/index.html.erb
+++ b/app/views/shared_stories/index.html.erb
@@ -1,3 +1,4 @@
+<div class="background-stories">
 <div class="wrapper-stories">
     <h1 class="text-center">Shared Stories</h1>
   <div class="container">
@@ -30,4 +31,5 @@
   <%= link_to "Write a story", new_shared_story_path, class: "hvr-sweep-to-right btn-blue"  %>
   </div>
   <% end %>
+</div>
 </div>
