--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
   <%= yield %>
 
 
-  <%= render 'shared/footer'  %>
+  <%#= render 'shared/footer'  %>
 
   <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&sensor=false&key=#{ENV["GOOGLE_MAPS_BROWSER_KEY"]}" %>
 
