--- a/app/views/shared_stories/index.html.erb
+++ b/app/views/shared_stories/index.html.erb
@@ -28,7 +28,7 @@
   </div>
   <% if current_user %>
   <div class="stories-center">
-  <%= link_to "Write a story", new_shared_story_path, class: "hvr-sweep-to-right btn-blue"  %>
+  <%= link_to "Write a story", new_shared_story_path, class: "hvr-sweep-to-right btn-orange"  %>
   </div>
   <% end %>
 </div>
