--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -49,9 +49,9 @@
               </div>
               <div class="post-make">
                 <% if post.button_valid(current_user) == "redirect" %>
-                <p><%= link_to "Write a request to this Post", new_user_session_path(), class: "hvr-underline-from-center btn-border-orange" %></p>
+                <p><%= link_to "Write a request", new_user_session_path(), class: "hvr-underline-from-center btn-border-orange" %></p>
                 <% elsif post.button_valid(current_user) == "request" %>
-                <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
+                <p><%= link_to "Write a request", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
                 <%else %>
                 <% end %>
               </div>
