--- a/app/assets/stylesheets/pages/_posts.scss
+++ b/app/assets/stylesheets/pages/_posts.scss
@@ -114,7 +114,7 @@
   font-size: 20px;
   border-style: solid;
   border-color: $light-blue;
-  font-color: white;
+  font-color: $light-blue;
   text-align: right;
 }
 
