--- a/app/assets/stylesheets/pages/_posts.scss
+++ b/app/assets/stylesheets/pages/_posts.scss
@@ -9,7 +9,7 @@
 
 .posts-card {
   background-color: white;
-  border: 3px solid $orange;
+  border: 2px solid $orange;
   padding: 74px 27px 11px 16px;
   margin: 20px 0px;
   min-height: 380px;
@@ -49,6 +49,7 @@
   min-height: 150px;
   overflow-wrap: break-word;
   word-wrap: break-word;
+  text-align: justify;
 }
 
 .posts-center {
@@ -67,11 +68,31 @@
 }
 
 .post-ago {
+  font-size: 10px;
   position: absolute;
-  top: 32px;
+  bottom: 8px;
   right: 23px;
 }
 
+.kind-label {
+  font-size: 11px;
+  position: absolute;
+  top: 32px;
+  right: 23px;
+  color: white;
+  padding-left: 5px;
+  padding-right: 9px;
+  border-radius:  32px 153px 50px 22px;
+}
+
+.dutchie {
+  background-color: $orange;
+
+}
+
+.refugee {
+  background-color: $light-blue;
+}
 
 /* .single_map {
   box-shadow: 0px 4px 10px 2px rgba(0,0,0,0.75);
