new button and warning on form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,14 +20,16 @@
 // Linkjes zwart nu even hier, maar vergeet het niet zo weg te halen :)
 a {
   color: $dark-gray;
-  &:hover {
-    color: $orange;
-    text-decoration: none;
-  }
-  &:visited {
-    text-decoration: none;
-    color: $dark-gray;
-  }
+}
+
+
+a:hover {
+  color: $orange;
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
 }
 
 body {
