--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -28,7 +28,7 @@
           <label for="my-file" class="input-file-trigger btn form-button" tabindex="0">select picture</label>
         </div>
         <%= f.input :photo_cache, as: :hidden  %>
-        <%= f.submit class: "form-button" %>
+        <%= f.submit class: "form-submit-button", value: "UPDATE PROFILE" %>
         <% end %>
 
         <div class="shared-links">
