--- a/app/assets/stylesheets/pages/_posts.scss
+++ b/app/assets/stylesheets/pages/_posts.scss
@@ -22,6 +22,23 @@
   padding-bottom: 20px;
 }
 
+.linktopost{
+  position: absolute;
+    top: 61px;
+    left: 54px;
+    bottom: 0;
+    width: 69%;
+    height: 15%;
+    z-index: 2;
+    opacity: 1;
+    padding-top: 30px;
+    padding-left: 100px;
+
+}
+
+
+
+
 .posts-underline {
   color: $orange;
   text-decoration: underline;
@@ -210,8 +227,17 @@
     color: white;
   }
   }
+  &:focus {
+    color: red;
+    text-decoration: none;
+    &:hover {
+    background-color: red;
+    color: white;
+  }
+  }
 }
 
 .goback{
   padding-top: 30px;
 }
+
