--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,6 +32,12 @@
               <div class="posts-underline-orange">
                 <span class="posts-title"> <%= post.subject %></span>
               </div><br>
+              <%= link_to " ", post_path(post), class:"linktopost" %> <br>
+                 <% if post.author.kind == "dutchie" %>
+               <div class="kind-label dutchie"> local </div>
+               <% else %>
+               <div class="kind-label refugee"> newcomer </div>
+               <% end %>
               <div class="posts-content">
                 <%= truncate(post.content, :length => 120) %>
                 <% if post.content.length > 120 %>
