--- a/app/views/dashboard/home/index.html.erb
+++ b/app/views/dashboard/home/index.html.erb
@@ -8,7 +8,8 @@
             <div class="received_requests">
               <h2 class="text-center">Your received requests</h2>
               <% if @received_requests.length == 0 %>
-              <br> You didn't receive any requests yet.
+              <br>
+              <p class="text-center">You didn't receive any requests yet.</p>
               <% end %>
               <% @received_requests.reverse.take(3).each do |request| %>
               <!-- Render received request -->
@@ -24,7 +25,8 @@
             <div class="sent_requests">
               <h2 class="text-center">Your sent requests</h2>
               <% if @sent_requests.length == 0 %>
-              <br> You didn't send any requests yet.
+              <br>
+              <p class="text-center">You didn't send any requests yet.</p>
               <% end %>
               <% @sent_requests.reverse.take(3).each do |request| %>
               <!-- Render sent request -->
